--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ MarkupSafe==2.1.5
 mpmath==1.3.0
 mypy-extensions==1.0.0
 networkx==3.2.1
-numpy==2.1.1
+numpy==2.0.0
 onnxruntime==1.19.2
 packaging==24.1
 pathspec==0.12.1
@@ -54,3 +54,6 @@ urllib3==2.2.3
 uvicorn==0.31.0
 
 keybert~=0.8.5
+bertopic~=0.16.4
+fuzzywuzzy~=0.18.0
+python-dotenv~=1.0.1
