--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,7 @@
-annotated-types==0.7.0
-anyio==4.6.0
-av==12.3.0
-black==24.10.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-ctranslate2==4.4.0
 fastapi==0.115.0
-faster-whisper==1.0.3
-ffmpeg-python==0.2.0
-filelock==3.16.1
-flatbuffers==24.3.25
-fsspec==2024.9.0
-future==1.0.0
-h11==0.14.0
-huggingface-hub==0.25.1
-humanfriendly==10.0
-idna==3.10
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-mpmath==1.3.0
-mypy-extensions==1.0.0
-networkx==3.2.1
-numpy==2.0.0
-onnxruntime==1.19.2
-packaging==24.1
-pathspec==0.12.1
-pillow==10.2.0
-platformdirs==4.3.6
-protobuf==5.28.2
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyreadline3==3.5.4
-python-multipart==0.0.12
-PyYAML==6.0.2
-regex==2024.9.11
 requests==2.32.3
-safetensors==0.4.5
-setuptools==75.1.0
-sniffio==1.3.1
-starlette==0.38.6
-sympy==1.13.3
-tokenizers==0.20.0
 torch==2.4.1+cu121
-torchaudio==2.4.1+cu121
-torchvision==0.19.1+cu121
-tqdm==4.66.5
-transformers==4.45.2
-typing_extensions==4.12.2
-urllib3==2.2.3
-uvicorn==0.31.0
+transformers==4.48.0
 
-keybert~=0.8.5
-bertopic~=0.16.4
-fuzzywuzzy~=0.18.0
 python-dotenv~=1.0.1
+nltk~=3.9.1
